Add some content to the different home pages.

--- a/frontend/src/components/pages/home/home.html
+++ b/frontend/src/components/pages/home/home.html
@@ -64,20 +64,29 @@
 	</div>
 
 	<div ng-switch-when="fr">
-		<h3>Bienvenue sur Monitool!</h3>
 
-		<p>Monitool est une extension de l’intranet de l’ONG</p>
-		<p>Il a pour objectif de centraliser les données générées par les projets de Médecins du Monde.</p>
+		<div class="alert alert-warning">
+			<p>
+				Monitool est un outil de gestion de projet, et non pas de suivi épidémiologique.<br/>
+
+				Son objectif est d'aider à la prise de décision sur les projets, grâce au suivi d'indicateurs qui vous renseigneront sur
+				l'avancement de vos activités, et sur la contribution de ces dernières
+				aux résultats et objectifs fixés par votre programme.<br/>
+
+				Bien qu'il puisse vous y aider, son objectif premier n'est pas de centraliser des fiches
+				de morbidité, qui sont chronophages et n'ont que peu de valeur en gestion de projet, spécialement sur
+				des projets de support aux structures.
+			</p>
+		</div>
 
 		<div class="row">
 			<div class="col-xs-6">
-				<h4>Pourquoi</h4>
+				<h4>Pourquoi centraliser le suivi des projets</h4>
 
 				<ul style="margin-bottom: 10px">
 					<li>
 						<strong>Augmenter la fiabilité</strong><br/>
 						<ul style="margin-bottom: 10px">
-							<li>Réduire la courbe d’apprentissage nécessaire à l'exploitation des données.</li>
 							<li>Disposer de contrôles de cohérence afin de limiter les erreurs de saisie</li>
 							<li>Limiter les fautes de calcul</li>
 						</ul>
@@ -96,10 +105,17 @@
 							<li>Disposer d'une unique version des données partagée entre siège et terrain</li>
 						</ul>
 					</li>
+					<li>
+						<strong>Standardiser</strong><br/>
+						<ul style="margin-bottom: 10px">
+							<li>Faciliter le turn-over en limitant l'utilisation d'outils différents sur chaque projet.</li>
+							<li>Réduire la courbe d’apprentissage nécessaire à l'exploitation des données d'un nouveau projet.</li>
+						</ul>
+					</li>
 				</ul>
 			</div>
 			<div class="col-xs-6">
-				<h4>Quand</h4>
+				<h4>Quand utiliser Monitool</h4>
 
 				<p>Monitool joue un rôle pendant quatre étapes d'un projet</p>
 				<ul style="margin-bottom: 10px">
