--- a/frontend/src/components/pages/project-reporting-home/home.html
+++ b/frontend/src/components/pages/project-reporting-home/home.html
@@ -8,3 +8,88 @@
 
 <legend translate="shared.reporting"></legend>
 
+
+<div class="row">
+	<div class="col-md-4">
+		<p>Cette section vous permet de suivre votre projet.</p>
+	</div>
+	<div class="col-md-8">
+
+		<table class="table table-bordered table-striped">
+			<thead>
+				<tr>
+					<th style="width: 50%">Tâche</th>
+					<th>État</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>
+						Consultez le rapport lié à un cadre logique
+						dans
+						<a class="btn btn-default btn-xs" ui-sref="main.project.reporting.general">
+							<i class="fa fa-line-chart"></i>
+							<span translate="shared.reporting_general"></span>
+						</a>
+					</td>
+					<td>
+						<progress-bar value="1"></progress-bar>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Consultez le rapport lié à vos indicateurs transversaux
+						dans
+						<a class="btn btn-default btn-xs" ui-sref="main.project.reporting.general">
+							<i class="fa fa-line-chart"></i>
+							<span translate="shared.reporting_general"></span>
+						</a>
+					</td>
+					<td>
+						<progress-bar value="1"></progress-bar>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Consultez le rapport lié à vos indicateurs annéxés
+						dans
+						<a class="btn btn-default btn-xs" ui-sref="main.project.reporting.general">
+							<i class="fa fa-line-chart"></i>
+							<span translate="shared.reporting_general"></span>
+						</a>
+					</td>
+					<td>
+						<progress-bar value="1"></progress-bar>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Consultez le rapport lié à une source de données
+						dans
+						<a class="btn btn-default btn-xs" ui-sref="main.project.reporting.general">
+							<i class="fa fa-line-chart"></i>
+							<span translate="shared.reporting_general"></span>
+						</a>
+					</td>
+					<td>
+						<progress-bar value="1"></progress-bar>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						Désagrégez un indicateur par site de collecte
+						dans
+						<a class="btn btn-default btn-xs" ui-sref="main.project.reporting.general">
+							<i class="fa fa-line-chart"></i>
+							<span translate="shared.reporting_general"></span>
+						</a>
+					</td>
+					<td>
+						<progress-bar value="0"></progress-bar>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+
+	</div>
+</div>
