Fix button translation in project-structure-home

--- a/frontend/src/components/pages/project-structure-home/home.html
+++ b/frontend/src/components/pages/project-structure-home/home.html
@@ -31,7 +31,7 @@
 				En cas d'erreur, cliquez sur
 				<span class="btn btn-default btn-xs">
 					<i class="fa fa-undo"></i>
-					Annuler les modifications
+					<span translate="shared.remove_changes"></span>
 				</span>
 				pour revenir à la dernière version sauvegardée.<br/>
 			</p>
