--- a/frontend/src/components/pages/project-reporting-general/project-group-by.html
+++ b/frontend/src/components/pages/project-reporting-general/project-group-by.html
@@ -1,7 +1,11 @@
 <div class="input-group">
 	<span class="input-group-addon"><i class="fa fa-columns"></i></span>
 
-	<select class="form-control input-sm" id="group-by-input" ng-model="$ctrl.groupBy" ng-change="$ctrl.onValueChange()">
+	<select
+		id="group-by-input"
+		class="form-control input-sm"
+		ng-model="$ctrl.groupBy"
+		ng-change="$ctrl.onValueChange()">
 		<option value="{{periodicity}}" ng-repeat="periodicity in $ctrl.periodicities">
 			{{('shared.' + periodicity)|translate}}
 		</option>
