Add placeholder when no description is provided in cc indicator list.

--- a/frontend/src/components/pages/cc-indicator-list/cc-indicator-list.html
+++ b/frontend/src/components/pages/cc-indicator-list/cc-indicator-list.html
@@ -17,7 +17,9 @@
 		<div class="panel-heading" title="{{indicator.name[$root.language]}}">{{indicator.name[$root.language]|maxLength:90}}</div>
 
 		<div class="panel-body">
-			<div>{{indicator.description[$root.language]|maxLength:200}}</div>
+			<div ng-if="indicator.description[$root.language]">{{indicator.description[$root.language]|maxLength:200}}</div>
+			<div ng-if="!indicator.description[$root.language]" translate="indicator.missing_description"></div>
+
 
 			<a ui-sref="main.indicator_reporting({indicatorId: indicator._id})"
 			   class="btn btn-xxs btn-default"
