Remove invalid class from some rows in general reporting.

--- a/frontend/src/components/pages/project-reporting-general/tbody-indicators.html
+++ b/frontend/src/components/pages/project-reporting-general/tbody-indicators.html
@@ -17,8 +17,7 @@
 	<td class="noprint"
 		ng-style="$ctrl.firstColStyle"></td>
 
-	<th class="row-title"
-		colspan="{{4 + $ctrl.columns.length}}"
+	<th colspan="{{4 + $ctrl.columns.length}}"
 		ng-style="$ctrl.firstColStyle">
 		<div>
 			{{row.name|translate}}
@@ -31,8 +30,7 @@
 
 	<td class="noprint"
 		ng-style="$ctrl.firstColStyle"></td>
-	<td class="row-title"
-		colspan="{{4 + $ctrl.columns.length}}"
+	<td colspan="{{4 + $ctrl.columns.length}}"
 		translate="project.reporting_empty"
 		ng-style="$ctrl.firstColStyle"></td>
 </tr>
