--- a/frontend/src/components/pages/admin-user/user-list.html
+++ b/frontend/src/components/pages/admin-user/user-list.html
@@ -6,7 +6,7 @@
 <div class="alert alert-info" translate="user.list_info"></div>
 
 <div>
-	<div class="panel panel-default indicator-panel" ng-repeat="user in $ctrl.displayedUsers track by user._id">
+	<div class="panel panel-default columns-panel" ng-repeat="user in $ctrl.displayedUsers track by user._id">
 		<div class="panel-body">
 			{{user.name}}<br/>
 
