--- a/frontend/src/components/shared/indicator/display.html
+++ b/frontend/src/components/shared/indicator/display.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default indicator-panel">
+<div class="panel panel-default columns-panel">
 
 	<div class="panel-heading" title="{{$ctrl.indicator.display}}">
 		<i class="fa fa-arrows fa-fw indicator-handle"></i>
