--- a/frontend/src/components/pages/admin-theme/theme-list.html
+++ b/frontend/src/components/pages/admin-theme/theme-list.html
@@ -6,12 +6,12 @@
 <div class="alert alert-info" translate="theme.list_info"></div>
 
 <div>
-	<div class="panel panel-primary indicator-panel">
+	<div class="panel panel-primary columns-panel">
 		<div class="panel-body">
 			<span translate="theme.new_theme"></span>
 			<a ng-click="$ctrl.create()" class="btn btn-xxs btn-primary" translate="theme.create_new"></a>
 		</div>
-	</div><div class="panel panel-default indicator-panel" ng-repeat="theme in $ctrl.themes|orderBy:('name.' + $root.language)">
+	</div><div class="panel panel-default columns-panel" ng-repeat="theme in $ctrl.themes|orderBy:('name.' + $root.language)">
 		<div class="panel-body">
 			{{theme.name[$root.language]}}
 
