--- a/frontend/src/components/pages/cc-indicator-list/cc-indicator-list.html
+++ b/frontend/src/components/pages/cc-indicator-list/cc-indicator-list.html
@@ -11,7 +11,7 @@
 	<!-- markup is broken on purpose: do not fix -->
 	<!-- If we put spaces between tags, margins break -->
 
-	<div><div class="panel panel-default indicator-panel"
+	<div><div class="panel panel-default columns-panel"
 		 ng-repeat="indicator in category.indicators|orderBy:('name.' + $root.language)">
 
 		<div class="panel-heading" title="{{indicator.name[$root.language]}}">{{indicator.name[$root.language]|maxLength:90}}</div>
